--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-  "installCommand": "pnpm install --frozen-lockfile",
   "buildCommand": "pnpm run build",
-  "outputDirectory": "dist/public",
-  "devCommand": "pnpm run dev"
+  "outputDirectory": "dist",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
